results/SpecGenBench/4-shot/log-UglyNum-2023_11_05_21_50_09.txt
class UglyNum {
    //@ ensures \result <==> n == 1;
    public static boolean isUgly(int n) {
        if (n <= 0) {
            return false;
        }
        int[] factors = {2, 3, 5};
        //@ maintaining 0 <= i && i <= factors.length;
        //@ maintaining (\forall int j; 0 <= j && j < i; n % factors[j] != 0);
        //@ decreases factors.length - i;
        for (int i = 0; i < factors.length; i++) {
            int factor = factors[i];
            //@ maintaining n == \old(n) / factor^k && k >= 0;
            //@ decreases k;
            while (n % factor == 0) {
                n /= factor;
            }
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/UglyNum.java:13: error: cannot find symbol
            //@ maintaining n == \old(n) / factor^k && k >= 0;
                                                  ^
  symbol:   variable k
  location: class UglyNum
/home/max/Documents/JMLGPT/tmp/UglyNum.java:13: error: cannot find symbol
            //@ maintaining n == \old(n) / factor^k && k >= 0;
                                                       ^
  symbol:   variable k
  location: class UglyNum
/home/max/Documents/JMLGPT/tmp/UglyNum.java:14: error: cannot find symbol
            //@ decreases k;
                          ^
  symbol:   variable k
  location: class UglyNum
3 errors

